# Document_QA_Bot

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: documents.py
backend/app/utils/: database.py  document_processor.py  embeddings.py  vector_store.py
frontend/: .env.example  app.py  pyproject.toml
